Added Dutch entry on configs.py view

--- a/django_app/main/templates/index.html
+++ b/django_app/main/templates/index.html
@@ -133,6 +133,9 @@
 				<li>
 					<a href="#" style="color:gray;"><img src="{{STATIC_URL}}img/flag-icons/de.png"> German (soon)</a>
 				</li>
+				<li>
+					<a href="{% url 'main.views.configs.change_language' 'nl'  %}"><img src="{{STATIC_URL}}img/flag-icons/nl.png"> Dutch</a>
+				</li>
 			</ul>
 		</div>
 		<div class="large-4 columns"></div>
