Code refactorizarion. README modified

--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -368,9 +368,9 @@
 <script id="template-theme" type="text/mustache">
     [[#themes]]        
 		<li class="theme-item">
-            <a id='theme_[[id]]' class="theme-link" href="#">
-	            <iframe src="/theme-preview/[[id]]" frameborder="0" width="200" height="150" scrolling="no"></iframe>
-	            <h4>[[name]]</h4>            	
+            <a id='theme_[[pk]]' class="theme-link" href="#">
+	            <iframe src="/theme/preview/[[pk]]" frameborder="0" width="200" height="150" scrolling="no"></iframe>
+	            <h4>[[fields.name]]</h4>            	
             </a>
 	    </li>		
     [[/themes]]
