--- a/django_app/main/templates/index.html
+++ b/django_app/main/templates/index.html
@@ -131,7 +131,7 @@
 					<a href="#" style="color:gray;"><img src="{{STATIC_URL}}img/flag-icons/it.png"> Italian (soon)</a>
 				</li>
 				<li>
-					<a href="#" style="color:gray;"><img src="{{STATIC_URL}}img/flag-icons/de.png"> German (soon)</a>
+					<a href="{% url 'main.views.configs.change_language' 'de'  %}"><img src="{{STATIC_URL}}img/flag-icons/de.png"> German</a>
 				</li>
 				<li>
 					<a href="{% url 'main.views.configs.change_language' 'nl'  %}"><img src="{{STATIC_URL}}img/flag-icons/nl.png"> Dutch</a>
