--- a/django_app/main/templates/index.html
+++ b/django_app/main/templates/index.html
@@ -122,7 +122,7 @@
 					<a href="{% url 'main.views.configs.change_language' 'es'  %}"><img src="{{STATIC_URL}}img/flag-icons/es.png"> Spanish</a>
 				</li>
 				<li>
-					<a href="#" style="color:gray;"><img src="{{STATIC_URL}}img/flag-icons/pt.png"> Portuguese (soon)</a>
+					<a href="{% url 'main.views.configs.change_language' 'pt'  %}"><img src="{{STATIC_URL}}img/flag-icons/pt.png"> Portuguese</a>
 				</li>
 				<li>
 					<a href="#" style="color:gray;"><img src="{{STATIC_URL}}img/flag-icons/fr.png"> French (soon)</a>
