--- a/django_app/main/templates/recover_password.html
+++ b/django_app/main/templates/recover_password.html
@@ -16,10 +16,7 @@
 	<div class="large-5 columns">
 		<form action="/recover-password" method="post">
 			{% csrf_token %}
-			{{form.non_field_errors}}
-			<label for="email">{% trans 'lbl_enter_your_email' %}</label>			
-				{{form.email.errors}}
-				{{form.email}}
+			{{ form }}
 			<button>
 				{% trans 'btn_send_recover_email' %}
 			</button>
