--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -138,25 +138,8 @@
 	</div>
 </div>
 
-<div id="toolbox-container" style="display:none;">
-	<div id="toolbox-text" class="toolbox" style="display:none;">
-		<div class="row">
-			<a id="btn-increase-font" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
-			<a id="btn-decrease-font" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
-			<a id="bold-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_bold' %}"> <i class="fi-bold"></i> </a>
-			<a id="underlined-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
-			<a id="italic-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
-			<a id="link-btn" class="button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
-			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> </a>
-		</div>
+<div id="toolbox-container">
 
-	</div>
-	<div id="toolbox-image" class="toolbox" style="display:none;">
-		<div class="row">
-			<a id="btn-increase-image-size" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
-			<a id="btn-decrease-image-size" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
-		</div>
-	</div>
 </div>
 
 <div id="add-image-box" class="reveal-modal small" data-reveal>
@@ -282,61 +265,29 @@
 	<iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="//[[link]]" frameborder="0" allowfullscreen></iframe>
 </script>
 
-<!-- <script id="template-text-component" type="text/mustache">
-	<div id='[[cid]]' class="component hoverable" style="[[container_style]]">
-	<div class="component-options" style="display:none;">
-	<a class="btn-edit-text tip-left" data-tooltip title="{% trans 'tt_btn_edit' %}">
-	<i class="fi-pencil"></i>
-	</a>
-	<a class="btn-delete-component tip-left" data-tooltip title="{% trans 'tt_btn_delete' %}">
-	<i class="fi-x"></i>
-	</a>
-	</div>
-	<div class='text [[text_type]] component-preview' style='[[style]]'>
-	<div class="component-content" contenteditable="false">
-	[[content]]
-	</div>
-	</div>
-	</div>
-</script> -->
-
-<!-- <script id="template-image-component" type="text/mustache">
-	<div id='[[cid]]' class="component hoverable" style="left:30%;top:20%;[[container_style]]">
-	<div class="component-options" style="display:none;">
-	<a class="btn-delete-component tip-left" data-tooltip title="{% trans 'tt_btn_delete' %}">
-	<i class="fi-x"></i>
-	</a>
-	</div>
-	<div class='image component-preview' style='[[style]]'>
-	<img src="
-	[[#url]]
-	[[url]]
-	[[/url]]
-	[[^url]]
-	{{STATIC_URL}}img/loading.gif
-	[[/url]]
-	" style="width: 100%; height: 100%;">
-	</div>
-	</div>
-</script> -->
-
-<!-- <script id="template-video-component" type="text/mustache">
-	<div id='[[cid]]' class="component hoverable" style="left:30%;top:20%;[[container_style]]">
-	<div class="component-options" style="display:none;">
-	<a class="btn-delete-component tip-left" data-tooltip title="{% trans 'tt_btn_delete' %}">
-	<i class="fi-x"></i>
-	</a>
-	</div>
-	<div class='video component-preview' style='position:relative;padding-bottom:56.25%;padding-top:30px;height:0;overflow:hidden;display:block;'>
-	<iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="//[[link]]" frameborder="0" allowfullscreen></iframe>
-	</div>
-	</div>
-</script> -->
-
 <script id="template-user" type="text/mustache">
 	<li id="user-[[id]]" class="user" data-tooltip title="[[first_name]] [[last_name]]">
-	<i class="fi-torso" style="color:[[color]];"></i>
+		<i class="fi-torso" style="color:[[color]];"></i>
 	</li>
+</script>
+
+<script id="template-text-toolbox" type="text/mustache">
+	<div class="row">
+		<a class="btn-increase-font button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
+		<a class="btn-decrease-font button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
+		<a class="bold-btn button secondary" data-tooltip title="{% trans 'tt_toggle_bold' %}"> <i class="fi-bold"></i> </a>
+		<a class="underlined-btn button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
+		<a class="italic-btn button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
+		<a class="link-btn button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
+		<a class="color-btn button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> </a>
+	</div>
+</script>
+
+<script id="template-image-toolbox" type="text/mustache">
+	<div class="row">
+		<a class="btn-increase-image-size button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
+		<a class="btn-decrease-image-size button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
+	</div>
 </script>
 
 <script id="template-chat-message" type="text/mustache">
