--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -139,7 +139,24 @@
 </div>
 
 <div id="toolbox-container">
+	<div id="toolbox-text" class="toolbox" style="display:none;">
+		<div class="row">
+			<a id="btn-increase-font" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
+			<a id="btn-decrease-font" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
+			<a id="bold-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_bold' %}"> <i class="fi-bold"></i> </a>
+			<a id="underlined-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
+			<a id="italic-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
+			<a id="link-btn" class="button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
+			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> </a>
+		</div>
 
+	</div>
+	<div id="toolbox-image" class="toolbox" style="display:none;">
+		<div class="row">
+			<a id="btn-increase-image-size" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
+			<a id="btn-decrease-image-size" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
+		</div>
+	</div>
 </div>
 
 <div id="add-image-box" class="reveal-modal small" data-reveal>
@@ -245,8 +262,14 @@
 </script>
 
 <script id="template-text-component" type="text/mustache">
-	<div class="text-content" contenteditable="true">
-	[[content]]
+	<div class="text-content" contenteditable="true">	
+	[[#link]]
+		<a href="[[link]]" class="link" target="_blank">
+	[[/link]]
+		[[content]]	
+	[[#link]]
+		</a>
+	[[/link]]
 	</div>
 </script>
 
@@ -271,30 +294,9 @@
 	</li>
 </script>
 
-<script id="template-text-toolbox" type="text/mustache">
-	<div class="row">
-		<a class="btn-increase-font button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
-		<a class="btn-decrease-font button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
-		<a class="bold-btn button secondary" data-tooltip title="{% trans 'tt_toggle_bold' %}"> <i class="fi-bold"></i> </a>
-		<a class="underlined-btn button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
-		<a class="italic-btn button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
-		<a class="link-btn button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
-		<a class="color-btn button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> </a>
-	</div>
-</script>
-
-<script id="template-image-toolbox" type="text/mustache">
-	<div class="row">
-		<a class="btn-increase-image-size button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
-		<a class="btn-decrease-image-size button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
-	</div>
-</script>
-
 <script id="template-chat-message" type="text/mustache">
 	<li class="message">
-	<!-- <p> -->
 	<b>[[first_name]] [[last_name]]:</b> [[message]]
-	<!-- </p> -->
 	</li>
 </script>
 
@@ -309,9 +311,9 @@
 	[[/themes]]
 </script>
 
-<script id="template-link" type="text/mustache">
+<!-- <script id="template-link" type="text/mustache">
 	<a href="[[link]]" class="link" target="_blank">[[content]]</a>
-</script>
+</script> -->
 
 <script id="template-image-preview" type="text/mustache">
 	<img src="[[url]]" width="100" />
