--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -285,7 +285,7 @@
 </script>
 
 <script id="template-video-component" type="text/mustache">
-	<iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="//[[link]]" frameborder="0" allowfullscreen></iframe>
+	<iframe style="position:absolute;top:0;left:0;width:100%;height:100%;" src="//[[url]]" frameborder="0" allowfullscreen></iframe>
 </script>
 
 <script id="template-user" type="text/mustache">
