--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -36,7 +36,7 @@
 	var body_default_text = "{% trans 'btn_new_body' %}"; 
 </script>
 
-<script data-main="{{STATIC_URL}}js/editor/EditorLoader.js" src="{{STATIC_URL}}js/require.js"></script>
+<script data-main="{{STATIC_URL}}js/edit.js" src="{{STATIC_URL}}js/require.js"></script>
 
 {% endblock %}
 
