Added feature: -Editor loader screen

--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -46,6 +46,11 @@
 
 {% block content %}
 
+<div id="loading-screen">
+	<img id="loading-icon" src="{{STATIC_URL}}img/loading.gif" />
+	<img id="logo" src="{{STATIC_URL}}img/logo.png" />
+</div>
+
 <div id="slides-bar">
 	<ul id="slides-list">
 
