--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -38,6 +38,7 @@
 		subtitle_default_text : {value:"{% trans 'btn_new_subtitle' %}"},
 		body_default_text : {value:"{% trans 'btn_new_body' %}"}
 	});
+	var socket;
 </script>
 
 <script data-main="{{STATIC_URL}}js/edit.js" src="{{STATIC_URL}}js/require.js"></script>
