--- a/django_app/project/static/css/edit.styl
+++ b/django_app/project/static/css/edit.styl
@@ -336,6 +336,10 @@ body
 	&.selected-component
 		selectedComponent()
 
+	.text-placeholder
+		position absolute
+		color #949494
+
 #themes-window
 	#themes-list
 		.theme-item
