Fixed the problem with slide thumbnails. Now it looks great. exactly as the original.

--- a/django_app/project/static/css/edit.css
+++ b/django_app/project/static/css/edit.css
@@ -118,6 +118,7 @@ body {
 #slides-bar #slides-list .slide-mini:hover .btn-delete {
   display: block;
   position: absolute;
+  z-index: 1;
   color: #9c3131;
   font-size: 1.3em;
 }
