--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -15,6 +15,7 @@
 <script src="{{STATIC_URL}}js/backbone.js"></script>
 <script src="{{STATIC_URL}}js/html2canvas.js"></script>
 <script src="{{STATIC_URL}}js/colorpicker.min.js"></script>
+<script src="{{STATIC_URL}}js/jscolor/jscolor.js"></script>
 {% if is_anonymous == False %}
 <script src="{{NODEJS_URL}}/socket.io/socket.io.js"></script>
 <script src="{{STATIC_URL}}js/backbone.iosync.js"></script>
@@ -165,7 +166,9 @@
 			<a id="underlined-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
 			<a id="italic-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
 			<a id="link-btn" class="button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
-			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> </a>
+			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> 
+                <input id="text-color" class="color {hash:true}" style="display:none;width:60px;border:none;"/>
+            </a>            
 		</div>
 
 	</div>
